--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: Indie Flower;
+    src: url(assets/fonts/IndieFlower-Regular.ttf) format("opentype");
+  }
+
+@font-face {
+  font-family:Dancing Script;
+  src: url(assets/fonts/DancingScript-VariableFont_wght.ttf)
+}
+
+@font-face{
+  font-family: Artika;
+  src:url(assets/fonts/Artifika-Regular.ttf)
+}
