--- a/src/app/common/loader/loader.component.css
+++ b/src/app/common/loader/loader.component.css
@@ -1,7 +1,7 @@
 .spinner {
     width: 40px;
     height: 40px;
-    background-color: #333;
+    background-color: rgb(207, 207, 207);
     margin: auto;
     -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
     animation: sk-rotateplane 1.2s infinite ease-in-out;
