--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -5,12 +5,11 @@
     text-align: center;
     text-transform: uppercase;
     margin: .2em 0 1em 0;
-    height: 2em;
     letter-spacing: 1px;
     color: #a6a6a6;
     text-shadow: #fff 0 1px 0;
     font-family: Artika;
-    font-size: 1.2vw;
+    font-size: 1.5vh;
 }
 
 .nav-link {
@@ -19,16 +18,16 @@
     background-position: left top;   
     background-size: contain;
     text-decoration: none;
-    color: #5c5c5c;
+    color: #a6a6a6;
+    text-shadow: #fff 0 1px 0;
+    font-family: Artika;
     font-size: 2.5vh;
-    font-weight: normal;
-    font-family: "Artika";
     text-transform:capitalize;
     }
     
     .nav-link.active{
         font-weight: bolder;
-        text-shadow: rgb(253, 217, 171) 0 3px 1px;        
+        text-shadow: rgb(0, 0, 0) 0 1px 0;
     }
 
 
@@ -40,7 +39,7 @@
         font-weight: bolder;
         /*text-shadow: rgb(255 255 255) 0 2px 1px;
          position: relative; */
-        margin-top: -3vh;
+        margin-top: -2.5vh;
         display: block;
         height: 10vh;
     }
@@ -49,8 +48,18 @@
     }
     .soundicon{
         position: absolute;
-        top:10px;
-        right:25px;
+        top:2vh;
+        right:1vw;
+        font-size: 3vh;
+        width: 20px;
+        color: #4a81b0;
+    }
+
+    .adminicon{
+        position: absolute;
+        top:2vh;
+        right:4vw;
+        font-size: 3vh;
         width: 20px;
         color: #4a81b0;
     }
