--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,14 +1,19 @@
-<div class="container-fluid componentbg" *ngIf="isAuthenticated()">
+<div class="container-fluid componentbg">
 <div class="row h-50 text-center">
     <div id="topline"> </div>
     <div id="triangle"> </div>
-    <div class="announce">QUEREMOS COMPARTILHAR NOSSA ALEGRIA COM VOCÊ ...</div>
-    <i class="soundicon fas fa-volume-up h3 col-1" *ngIf="this.audio?.src" (click)="this.stopAudio();" ></i>
-    <i class="soundicon fas fa-volume-off h3 col-1" *ngIf="!this.audio?.src" (click)="this.playAudio();" ></i>
+    <div class="d-flex w-100 justify-content-center">
+      <div class="flex announce"> QUEREMOS COMPARTILHAR NOSSA ALEGRIA COM VOCÊ ...</div>
+    </div>
+    <h3>
+    <i class="soundicon fas fa-volume-up" *ngIf="this.audio?.src" (click)="this.stopAudio();" ></i>
+    <i class="soundicon fas fa-volume-off" *ngIf="!this.audio?.src" (click)="this.playAudio();" ></i>
+    <a href="/login"><i  (click)="this.logIn();" class="adminicon fas fa-user-cog" ></i></a>
+    </h3>
   </div>
     <div class="d-flex w-80 justify-content-center mx-5" role="tablist">
         <div class="flex-fill w-25 text-center" >
-          <a class="nav-link" routerLinkActive="active" routerLink="/movies">Home</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/preview">Previsão</a>
         </div>
         <div class="flex-fill w-25 text-center">
           <a class="nav-link " routerLinkActive="active" routerLink="/gallery">Imagens</a>
@@ -17,16 +22,13 @@
           <a class="bebe" routerLinkActive="active" routerLink="/home" >Martim</a>
         </div>
         <div class="flex-fill w-25  text-center">
-          <a class="nav-link" routerLinkActive="active" routerLink="/cad">Presentes</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/cad">Chá de bebe</a>
         </div>
-        <div *ngIf="isAuthenticated()" class="flex w-25  text-center">
-            <a class="nav-link" href="#" (click)="logOff()">Desconectar</a>
-        </div>
-        <div *ngIf="!isAuthenticated()" class="flex w-25  text-center">
-            <a class="nav-link" href="#" (click)="logIn()">Login</a>
+        <div class="flex-fill w-25  text-center">
+          <a class="nav-link" routerLinkActive="active" routerLink="/cad">Mural</a>
         </div>
 
       </div>
-      <div class="row" id="menuline"> </div>
+      <div class="row" id="menuline"></div>
     </div>
 
