--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -5,20 +5,15 @@
     max-height: 60vh;
     border: solid 5px white;
     background: rgb(133, 133, 133);
+    box-shadow: 0px 1vh 2vh rgba(0,0,0,.8);
 }
 
-.fundoimg{
-    background: transparent url(../../../assets/img/fundofoto.png) no-repeat;
-    background-position: center bottom;
-    background-size: contain;
-    padding-bottom: 0.7vh; 
-}
 
 .fontDefault{
     margin: 1% 10% 1% 10%;
     background: rgba(250, 250, 250, .3);
     font-family: Artika;
-    font-size: large;
+    font-size: 2.5vh;
     font-weight: normal;
     color: rgb(82, 67, 49);
 }
