--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid componentbg">
-<div class="row h-50 text-center">
+<div class="row h-25 text-center">
     <div id="topline"> </div>
     <div id="triangle"> </div>
     <div class="d-flex w-100 justify-content-center">
@@ -13,7 +13,7 @@
   </div>
     <div class="d-flex w-80 justify-content-center mx-5" role="tablist">
         <div class="flex-fill w-25 text-center" >
-          <a class="nav-link" routerLinkActive="active" routerLink="/preview">Previsão</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/preview"><h3>Previsão</h3></a>
         </div>
         <div class="flex-fill w-25 text-center">
           <a class="nav-link " routerLinkActive="active" routerLink="/gallery">Imagens</a>
