--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -21,7 +21,7 @@
     color: #a6a6a6;
     text-shadow: #fff 0 1px 0;
     font-family: Artika;
-    font-size: 2.5vh;
+    font-size: 1vw;
     text-transform:capitalize;
     }
     
