--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -1,16 +1,3 @@
-.row{
-    height:15vh;
-}
-.announce {
-    text-align: center;
-    text-transform: uppercase;
-    margin: .2em 0 1em 0;
-    letter-spacing: 1px;
-    color: #a6a6a6;
-    text-shadow: #fff 0 1px 0;
-    font-family: Artika;
-    font-size: 1.5vh;
-}
 
 .nav-link {
     background-image: url(../../../assets/img/dots.png);
@@ -18,30 +5,22 @@
     background-position: left top;   
     background-size: contain;
     text-decoration: none;
-    color: #a6a6a6;
+    color: #a6a6a6!Important;
     text-shadow: #fff 0 1px 0;
     font-family: Artika;
-    font-size: 1vw;
     text-transform:capitalize;
     }
     
     .nav-link.active{
-        font-weight: bolder;
-        text-shadow: rgb(0, 0, 0) 0 1px 0;
+        color: #060c5c!important;
     }
-
 
     .bebe{
         text-decoration: none;
         color: #4a81b0;
         font-family: Dancing Script;
-        font-size: 7vh;
         font-weight: bolder;
-        /*text-shadow: rgb(255 255 255) 0 2px 1px;
-         position: relative; */
-        margin-top: -2.5vh;
         display: block;
-        height: 10vh;
     }
     li:hover{
         text-shadow: white 0 2px;
@@ -66,21 +45,6 @@
 
     .componentbg{
         background:transparent url('../../../assets/img/bg.png') repeat;
-    }
-
-    #triangle {
-        height: 1vh;
-        width: 100vw;
-
-        background-image: url(../../../assets/img/triangle.png);
-        background-position: center;
-        background-repeat: no-repeat;
-    }
-
-    #topline {
-        background-color: #4a81b0;
-        height: 1vh;
-        width: 100%;
     }
 
     #menuline {
