--- a/src/app/pages/gallery/gallery.component.css
+++ b/src/app/pages/gallery/gallery.component.css
@@ -1,12 +1,12 @@
 ngb-carousel{
     padding: 5px;
-    margin-top: 15px;
+    margin: 15px;
     background-color: rgba(0,0,0,0.3);
     border: rgb(146, 146, 146) solid 2px;
-    color: rgb(255, 255, 255);
-    text-shadow: rgb(0, 0, 0) 1px 1px 2px;
+    color: rgb(0, 0, 0);
+    text-shadow: rgb(0 0 0) 1px 1px 2px;
     position: relative;
-    height: 80vh;
+    height: auto;
 }
 
 .picsum-img-wrapper>img{
@@ -20,9 +20,11 @@ ngb-carousel{
 }
 
 .carousel-caption{
-    top: 81vh;
-    font-size: 3vh;
+    top: 64%;
+    font-size: auto;
     position: fixed;
+    width: auto;
+    font-size: larger;
 }
 
 
