--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,19 +1,20 @@
 .imgcss{
     margin: 5px;
-    height: 60vh;
+    height: auto;
     max-width: 80vw;
-    max-height: 60vh;
+    max-height: 62vh;
     border: solid 5px white;
-    background: rgb(133, 133, 133);
-    box-shadow: 0px 1vh 2vh rgba(0,0,0,.8);
+    background: rgba(255, 255, 255,.5);
+    box-shadow: 0px 1vh 2vh rgb(0 0 0 / 80%);
+    margin-top: 3vh;
 }
 
 
 .fontDefault{
-    margin: 1% 10% 1% 10%;
+    margin: 1% 5% 1% 5%;
     background: rgba(250, 250, 250, .3);
     font-family: Artika;
-    font-size: 2.5vh;
+    font-size: auto;
     font-weight: normal;
     color: rgb(82, 67, 49);
 }
