--- a/src/app/pages/preview/preview.component.css
+++ b/src/app/pages/preview/preview.component.css
@@ -11,11 +11,28 @@
 }
 .imgcss{
     position: absolute;
-    height: 40vh;
-    max-width: 80vw;
-    max-height: 40vh;
+    height: auto;
+    width: auto;
+    min-width: 50%;
+    max-height: 70%;
     padding: 0;
     margin: 0;
-    top: 37px;
-    right: -38px;
+    top: 30%;
+    right: -28px;
+}
+
+.bgtransp{
+background: rgba(255,255,255,0.6);
+}
+
+.card-text{
+    position: relative;
+    font-size: auto;
+}
+
+.bebevideo{
+    width: auto;
+    height: auto;
+    max-height: 50%;
+    max-width: 85%;
 }
