--- a/src/app/pages/preview/preview.component.html
+++ b/src/app/pages/preview/preview.component.html
@@ -1,16 +1,16 @@
 <div class="container-fluid card-columns p-2">
-    <div class="card h-100">
+    <div class="card h-100 bgtransp">
         <div class="card-header m-0 bg-linho">
             <h5 class="card-title text-center m-0">Simulação</h5>
         </div>
         <div class="card-body text-center">
-            <video controls (click)="toggleVideo()" width="auto" height="400px" id="videoPlayer" autoplay loop>
+            <video controls (click)="toggleVideo()" class="bebevideo" id="videoPlayer" autoplay loop>
                 <source src="{{videosource}}" type="video/mp4" />
                 Browser not supported
             </video>
         </div>
     </div>
-    <div class="card h-100">
+    <div class="card h-100 bgtransp">
         <div class="card-header text-center m-0 bg-linho">
             <h5 class="card-title m-0">Estimativa para a chegada</h5>
         </div>
@@ -18,7 +18,7 @@
             <p class="card-text">entre 16 à 28 /05/2021</p>
         </div>
     </div>
-    <div class="card h-100">
+    <div class="card h-100 bgtransp">
         <div class="card-header m-0 bg-linho">
             <h5 class="card-title m-0">Curiosidade do período atual de gestação</h5>
         </div>
