--- a/src/app/pages/gallery/gallery.component.html
+++ b/src/app/pages/gallery/gallery.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-    <div class="col text-center">
+    <div class="col text-center pt-5">
         <ngb-carousel *ngIf="Items">
             <ng-template ngbSlide *ngFor="let image of Items; index">
               <div class="picsum-img-wrapper vertical-align-center">
