--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-loader></app-loader>
-<app-header></app-header>
+<app-header *ngIf="this.routerLocal.url != '/login'"></app-header>
 <!-- your navs bound to current route fragments -->
 <div class="wrapper">
     <router-outlet ></router-outlet>
