--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -5,6 +5,7 @@
   </button>
   <i class="soundicon ni ni-settings-gear fas fa-volume-up" *ngIf="this.audio?.src" (click)="this.stopAudio();" ></i>
   <i class="soundicon ni ni-settings-gear fas fa-volume-off" *ngIf="!this.audio?.src" (click)="this.playAudio();" ></i>
+  <i class="adminicon ni ni-settings-gear fas fa-cog" routerLink="/login" ></i>
   <div class="collapse navbar-collapse  ps-2" [ngbCollapse]="!toggleNavbar">
     <ul class="navbar-nav menu-collapse animate__animated animate__fadeInDown">
       <li class="nav-item active">
@@ -17,7 +18,7 @@
         <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/gallery">Imagens</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/convite">Chá de bebê</a>
+        <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/event">Chá de bebê</a>
       </li>  
       <li class="nav-item">
         <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/mural">Mural</a>
