Inclusao de menu Fraldas e incio de integração Juno

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -23,6 +23,9 @@
       <li class="nav-item">
         <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/mural">Mural</a>
       </li>  
+      <li class="nav-item">
+        <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/checkout">Fralda</a>
+      </li>  
     </ul>
   </div>
 </nav>
