--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid">
     <div class="d-flex">
 
-        <p class="fontDefault text-center fst-italic">Este ano de 2021 está sendo muito especial para nós,
+        <p class="fontDefault text-center fst-italic">"Este ano de 2021 está sendo muito especial para nós,
             estamos muito ansiosos pela chegada do Martim. 
             Sabemos que a pandemia ainda não irá nos permitir um contato tão próximo, porém, 
             como todo bom brasileiro, não desistimos nunca ...
             Criamos este site para compartilhar esses momentos com as pessoas que amamos e diminuir, 
-            mesmo que virtualmente, a distancia entre nós</p>
+            mesmo que virtualmente, a distancia entre nós"</p>
     </div>
 
     <div class="d-flex justify-content-center">
