--- a/src/app/pages/header/header.component.css
+++ b/src/app/pages/header/header.component.css
@@ -1,91 +1,205 @@
-.collapse:not(.show) {
-    margin-right: 4vw!important;
+<!-- header.header .navbar nav ul.mobile li a {
+    padding: 0 0 18px 0;
+}
+
+.banner-slider .content-banner {
+    width: 80%!important;
+    max-width: 720px;
+}
+
+.modal {
+    font-family: 'OPSB'!important;
+    padding: 15px!important;
+}
+
+.content.mural .block-button a.button-send-menssage {
+    border-radius: 3px!important;
+    padding: 15px 35px!important;
+    font-family: 'OPS'!important;
+    font-size: 20px!important;
+}
+
+.offCanvas nav ul li a {
+    padding: 15px 7px;
+    font-size: 17px;
+}
+
+.infoNull {
+    padding: 7px 25px;
+    text-align: center;
+}
+
+.infoNull img {}
+
+.infoNull p {
+    color: rgb(122, 122, 122)!important;
+    font-size: 20px;
+}
+
+@media screen and (max-width:930px) {
+    .banner-slider .content-banner .date-week {
+        bottom: -90px;
+        right: 50%;
+        -webkit-transform: translateX(50%) scale(0.5);
+    }
+}
+
+-->.ftl,
+.ft2,
+.ft3,
+.ft4 {
+    position: fixed;
+    z-index: -1;
+}
+
+.ftl {
+    width: 160px;
+    bottom: 420px;
+    left: 5%;
+}
+
+.ft2 {
+    width: 160px;
+    bottom: 450px;
+    right: 0;
+}
+
+.ft3 {
+    width: auto;
+    bottom: 50px;
+    left: 100px;
+}
+
+.ft4 {
+    width: auto;
+    bottom: 104px;
+    right: 52px;
+}
+
+@media screen and (max-width: 860px) {
+    .ftl,
+    .ft2,
+    .ft3,
+    .ft4 {
+        zoom: 0.7
+    }
+}
+
+@media screen and (max-width: 440px) {
+    .ftl,
+    .ft2,
+    .ft3,
+    .ft4 {
+        zoom: 0.5
+    }
 }
 
 .nav-link {
     background-image: url(../../../assets/img/dots.png);
     background-repeat: repeat-x;
-    background-position: left top;   
+    background-position: left top;
     background-size: contain;
     text-decoration: none;
-    color: #4483b9!Important;
-    text-shadow: #fff 0 1px 0;
+    color: white!Important;
     font-family: Artika;
-    text-transform:capitalize;
-    }
-    
-    .nav-link.active{
-        color: #2e5b83!important;
-        text-shadow: #fff 0 2px 2px;
-    }
+    text-transform: capitalize;
+}
 
-    @media(max-width: 991px){
-    .menu-collapse{
+.nav-link.active {
+    color: white!important;
+    text-shadow: #2e5b83 0px 0px 3px;
+}
+
+@media(max-width: 991px) {
+    .menu-collapse {
         position: fixed;
         text-align: center;
-        width: 100%;
-        background: rgba(255,255,255,0.9);
-        z-index: 30;
+        background: #8badd6;
+        z-index: 99;
+        top: 50px;
+        width: 50%;
     }
 }
 
-    @media(min-width: 992px){
-    .menu-collapse{
+.nav-item:first-child {
+    border: 0;
+}
+
+.nav-item {
+    border-left: rgb(255, 255, 255) solid 1px;
+}
+
+@media(min-width: 992px) {
+    .menu-collapse {
         text-align: center;
         width: 100%;
-        background: rgba(255,255,255,0.4);
-        margin-right: 4vw;
+        background: #8badd6;
     }
 }
 
-    .bebe{
-        color: #2e5b83;
-        font-family: Dancing Script;
-        font-weight: bolder;
-        font-size: 3rem;
-        display: block;
-        text-shadow: white 1px 3px 2px ;
-    }
+.bebe {
+    color: #2e5b83;
+    font-family: Dancing Script;
+    font-weight: bolder;
+    font-size: 5rem;
+    display: block;
+    text-shadow: gray 1px 3px 2px;
+}
 
-    li:hover{
-        text-shadow: white 0 2px;
-    }
-    
-    @media(min-width: 992px){
-        .soundicon{top:.5rem;
-        right:10px;}
-        .adminicon{top:2.5rem;
-        right:10px;}
-    }
-    @media(max-width: 991px){
-        .soundicon{top:1.3rem;
-        right:6rem;}
-        .adminicon{top:1.5rem;
-        right:9rem;}
-    }
-    
-    .soundicon{
-        position: absolute;
-        font-size: 1.5rem;
-        width: 20px;
-        color: #4a81b0;
-    }
+li:hover {
+    text-shadow: #2e5b83 0px 0px 3px;
+}
 
-    .adminicon{
-        position: absolute;
-        font-size: 1,5rem;
-        width: 20px;
-        color: #4a81b0;
+@media(min-width: 992px) {
+    .soundicon {
+        top: .5rem;
+        right: 10px;
     }
+    .adminicon {
+        top: 3rem;
+        right: 10px;
+    }
+}
 
-    .componentbg{
-        background:white url('../../../assets/img/header2.jpg') top right no-repeat;
-        background-size: 100% 72px;
-        box-shadow: black 1px -3px 7px;
+@media(max-width: 991px) {
+    .soundicon {
+        top: 1.3rem;
+        right: 1rem;
     }
+    .adminicon {
+        top: 1.5rem;
+        right: 4rem;
+    }
+}
 
-    #menuline {
-        border-bottom: solid #4a80b067 1px;
-        padding-top: 5px;
-        height: 1px;
-    }
+.soundicon {
+    position: absolute;
+    font-size: 2rem;
+    width: 20px;
+    color: #4a81b0;
+}
+
+.adminicon {
+    position: absolute;
+    font-size: 1.5rem;
+    width: 20px;
+    color: #4a81b0;
+}
+
+.componentbg {
+    background: white url('../../../assets/img/header2.jpg') top right no-repeat;
+    background-size: 100% 72px;
+    box-shadow: #eaeaea 0px 1px 0px;
+}
+
+.navbar-toggler {
+    position: absolute;
+    left: 5px;
+    top: -220px;
+}
+
+#menuline {
+    border-bottom: solid #4a80b067 1px;
+    padding-top: 5px;
+    height: 1px;
+}
