--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,19 +1,18 @@
 .imgcss{
     margin: 5px;
     height: auto;
-    max-width: 80vw;
-    max-height: 62vh;
+    max-width: 80%;
+    max-height: 90%;
     border: solid 5px white;
     background: rgba(255, 255, 255,.5);
     box-shadow: 0px 1vh 2vh rgb(0 0 0 / 80%);
-    margin-top: 3vh;
+    margin-top: 1vh;
 }
 
 
 .fontDefault{
-    margin: 1% 5% 1% 5%;
-    background: rgba(250, 250, 250, .3);
-    font-family: Artika;
+    margin: 2% 2% 2% 2%;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",sans-serif;
     font-size: auto;
     font-weight: normal;
     color: rgb(82, 67, 49);
