--- a/src/app/pages/preview/preview.component.css
+++ b/src/app/pages/preview/preview.component.css
@@ -1,6 +1,9 @@
+.card{
+    box-shadow: grey 2px 2px 1px;
+}
 
 .card-title{
-    font-family: Artika ;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",sans-serif ;
     color: #1e3447;
     text-shadow: white  1px 2px 2px;
     text-align: center;
@@ -33,6 +36,6 @@ background: rgba(255,255,255,0.6);
 .bebevideo{
     width: auto;
     height: auto;
-    max-height: 50%;
-    max-width: 85%;
+    max-height: 60%;
+    max-width: 100%;
 }
