--- a/src/styles.css
+++ b/src/styles.css
@@ -16,5 +16,699 @@
 }
 
 .bg-linho{
-  background: url(assets/img/linho.jpg) repeat;
+  background: rgb(248, 250, 252);
 }
+
+.wrapper {
+  min-height: 100%;
+  margin: 0px auto;
+  }
+  
+  body, html {
+  min-height: 100%;
+  }
+
+  *{
+    -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+    box-sizing: border-box;
+  }
+  body{
+     /* background-image:url('/themes/convites/baloes-masculino/bg.jpg'); */
+      background-repeat:no-repeat;
+      background-size:cover;
+      background-position:center;
+      background-attachment:fixed;
+      margin:0;
+      padding:0;
+  }
+  h1,h2,h3,h4,h5,h6{}
+  p{
+      font-family:"OPS";
+      color:rgb(127,110,113);
+      letter-spacing:.5px;
+      line-height:26px;
+      font-size:18px;
+  }
+  a{
+      text-decoration:none;
+  }
+  /* IMPUTS */
+  input[type=text],input[type=mail], input[type=number], select, textarea{
+      background-color:rgb(255,255,255);
+      border:rgb(107,137,162) solid 1px;
+      color:rgb(107,137,162)!important;
+      font-size:20px;
+      border-radius:2px;
+      color:rgb(180,180,180);
+      width:100%;
+      height:56px;
+      padding:7px;
+  }
+  /* IMPUTS */
+  
+  .cover{
+      width:100%;
+      height:100%;
+      object-fit:cover;
+      object-position: top;
+  }
+  .wdh{
+      max-width:1115px;
+      margin:0 auto;
+      position:relative;
+  }
+  .flex{
+    display:flex;
+    justify-content:space-around;
+    display:-webkit-box;
+    display:-moz-box;
+    display:-ms-flexbox;
+    display:-webkit-flex;
+    flex-flow:row wrap;
+    -webkit-flex-flow:row wrap;
+    align-itens:center;
+  }
+  
+  header.header{
+      text-align:center;
+      position:relative;
+  }
+  header.header .wdh{
+      max-width: 1380px;
+      padding: 53px 0;
+  }
+  header.header .wdh .item-left{}
+  header.header .wdh .item-left img{}
+  header.header .wdh .item-title{
+      font-family:"AMTWR";
+      letter-spacing:1px;
+  }
+  header.header .wdh .item-title .sub-title{
+      font-size:36px;
+      color:rgb(125,156,182);
+  }
+  header.header .wdh .item-title .title-name a{
+      font-family:"AMTW";
+      font-size: 66px;
+      color:rgb(107,137,162);
+  }
+  header.header .wdh .item-title .line-title{}
+  header.header .wdh .item-right{}
+  header.header .wdh .item-left img,
+  header.header .wdh .item-right img{
+      height:140px;
+  }
+  header.header .navbar{
+      position:absolute;
+      width:100%;
+      height:60px;
+      bottom:-30px;
+      z-index:99;
+  }
+  header.header .navbar nav{
+      background-color:rgb(147,176,201);
+      border-radius:5px;
+      display:table;
+      max-width:950px;
+      height:100%;
+      margin:0 auto;
+      font-size:20px;
+      font-family:"AMTW";
+      letter-spacing:1px;
+  }
+  header.header .navbar nav ul.mobile{
+      display:none!important;
+  }
+  header.header .navbar nav ul.desktop{
+      list-style:none;
+      margin:0 auto;
+      padding:0;
+      display:table-cell;
+      vertical-align:middle;
+      width:100%;
+  }
+  header.header .navbar nav ul.desktop li,
+  header.header .navbar nav ul.mobile li{
+      border-left:rgb(255,255,255) solid 1px;
+      display:inline-block;
+  }
+  header.header .navbar nav ul.desktop li:first-child,
+  header.header .navbar nav ul.mobile li:first-child{
+      border:0;
+  }
+  header.header .navbar nav ul.desktop li a,
+  header.header .navbar nav ul.mobile li a{
+      color:rgb(255,255,255);
+      display:block;
+      padding:10px 15px;
+    font-size:20px;
+  }
+  
+  .btn-link-prods a{
+    background-color:rgb(147, 176, 201);
+  }
+  
+  /* BANNER */
+  .banner-slider{
+      height:500px;
+  }
+  .banner-slider .content-banner{
+      background-color:rgb(255,255,255);
+      border:#90bbde solid 2px;
+      border-radius:2px;
+      max-width:1316px;
+      height:500px;
+      margin:0 auto;
+      position:relative;
+  }
+  .banner-slider .content-banner img.cover{
+      position:absolute;
+      top:0;
+      width:100%;
+      height:500px;
+      object-fit:cover;
+      overflow:hidden;
+  }
+  .banner-slider .content-banner .date-week{
+      position:absolute;
+      right:-100px;
+      bottom:-40px;
+      width:315px;
+      height:160px;
+  }
+  .banner-slider .content-banner .date-week img{}
+  
+  .week-gestation{
+      font-size: 5.5em;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      font-family: "OPS";
+      font-weight: bold;
+      color: #ffffff;
+  }
+  
+  /* CONTENT */
+  .content{
+      padding: 110px 0 40px 0;
+  }
+  
+  .content .wdh .title-page{
+      font-size: 26px;
+      font-family:"AMTW";
+      text-align:center;
+      color:rgb(107,137,162);
+  }
+  .content .wdh .title-page h1{
+      margin:0;
+  }
+  
+  .content.home{}
+  .content.home .text{
+      text-align:center;
+      max-width: 967px;
+      margin:65px auto 95px auto;
+  }
+  content.home{}
+  
+  /* SLIDER HOME */
+  .gallery .slider-photos .item-photo img{
+      border:#90bbde solid 2px!important;
+  }
+  /* SLIDER HOME */
+  
+  /* LISTA DE FALDAS */
+  .content.list-fraldas{}
+  .content.list-fraldas .list-prods{
+      margin:70px 10px;
+      position:relative;
+  }
+  .content.list-fraldas .list-prods .open-cart{
+    position:fixed;
+    right:10%;
+    bottom:20%;
+    z-index:99999999;
+  }
+  .content.list-fraldas .list-prods .item-prod{
+      background-color:rgb(255,255,255);
+      border:#a8c6df solid 1px;
+      border-radius:7px;
+      width:260px;
+      text-align:center;
+      margin-bottom:30px;
+  }
+  .content.list-fraldas .list-prods .item-prod .img{
+      height:240px;
+  }
+  .content.list-fraldas .list-prods .item-prod .img img.cover{
+      width:80%;
+      object-fit:contain;
+  }
+  .content.list-fraldas .list-prods .item-prod .info{
+      background-color: rgb(168,198,223);
+      color:rgb(255,255,255);
+      padding:15px 0;
+      height:150px;
+      position:relative;
+  }
+  .content.list-fraldas .list-prods .item-prod .info .title{
+      font-family:"OPS";
+      font-size:17px;
+      padding:7px;;
+      letter-spacing:1px;
+  }
+  .content.list-fraldas .list-prods .item-prod .info .title h3{
+      margin:0;
+  }
+  .content.list-fraldas .list-prods .item-prod .info .title span{}
+  .content.list-fraldas .list-prods .item-prod .info button{
+      background-color: rgb(107,137,162);
+      border-radius:4px;
+      color:rgb(255,255,255);
+      font-family:"OPSB";
+      padding:9px 35px;
+      position:absolute;
+      left:50%;
+      bottom:17%;
+      letter-spacing:1.9px;
+  }
+  /* LISTA DE FALDAS */
+  
+  /* BLOG */
+  .content.blog{}
+  .content.blog.single{
+      padding:40px 0;
+  }
+  .content.blog.single .list-blog .prev-post .title{
+      margin-bottom:40px!important;
+  }
+  .content.blog .wdh{
+      max-width:800px;
+  }
+  .content.blog .list-blog{
+      margin:70px 10px;
+  }
+  .content.blog. .list-blog .prev-post{}
+  .content.blog .list-blog .prev-post .img{
+      border:rgb(107,137,162) solid 1px;
+      height:350px;
+  }
+  .content.blog .list-blog .prev-post .img img{}
+  .content.blog .list-blog .prev-post .title{
+      color:rgb(107,137,162);
+      font-family:"OPSB";
+      margin-left:7px;
+      letter-spacing:1px;
+  }
+  .content.blog .list-blog .prev-post .title h2{
+      font-size:38px;
+      margin:0;
+  }
+  .content.blog .list-blog .prev-post .title span{
+      font-size:18px;
+  }
+  .content.blog .list-blog .prev-post .text{
+      font-family:"OPS";
+      color:rgb(127,110,113);
+      padding:7px;
+  }
+  .content.blog .list-blog .divider-post{
+      text-align:center;
+      padding:30px;
+  }
+  
+  /* MURAL */
+  .content.mural .list-mural{
+      margin:70px 10px;
+  }
+  .content.mural .list-mural *{
+      color:rgb(255,255,255);
+  }
+  .content.mural .list-mural .item-mural{
+      background:rgb(162,186,206);
+      border-radius:10px;
+      padding:10px;
+      width:510px;
+      margin-bottom:20px;
+      text-align:center;
+  }
+  .content.mural .list-mural .item-mural .inter{
+      border:rgb(255,255,255) dotted 1px;
+      border-radius:10px;
+      padding:20px;
+  }
+  .content.mural .list-mural .item-mural .inter .text{}
+  .content.mural .list-mural .item-mural .inter .name{
+      font-family:"OPS";
+      font-size:20px;
+  }
+  
+  .content.mural .block-button{
+    display:block;
+    margin:70px 0 100px 0;
+    text-align:center;
+  }
+  .content.mural .block-button a.button-send-menssage{
+    background-color: rgb(107,137,162);
+    border-radius:3px;
+    color:rgb(255,255,255);
+    padding:15px 35px;
+    font-family:'AMTW';
+    font-size:20px;
+  }
+  
+  /* GALERIA */
+  .content.galeria .list-galeria{
+      margin:70px 10px;
+  }
+  .content.galeria .list-galeria .item-galeria{
+    width:510px;
+    /*height:400px;*/
+    margin-bottom:40px;
+    border-radius:10px;
+    overflow:hidden;
+    border:rgb(107,137,162) solid 1px;
+  }
+  .content.galeria .list-galeria .item-galeria img{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    object-position:center;
+  }
+  
+  /* EVENTO */
+  .content.event{}
+  .content.event .form-block{
+      margin:70px 10px;
+  }
+  .content.event .form-block .wdh{
+      max-width:800px;
+  }
+  .content.event .form-block label{
+      color:rgb(125,156,182);
+      display:block;
+      margin-bottom:20px;
+  }
+  .content.event .form-block label span{
+      font-family:"OPSB";
+      font-size:24px;
+  }
+  
+  .content.event .form-block label a{
+      color:rgb(125,156,182);
+      font-size:16px;
+      text-align:center;
+      display:block;
+  }
+  .content.event .form-block label a small{
+      background-color:rgb(125,156,182);
+      color:rgb(255,255,255);
+      padding:0 6px;
+      border-radius:100px;
+      font-size:16px;
+  }
+  
+  .content.event .form-block input[type=submit]{
+      background-color: rgb(107,137,162);
+      border-radius: 4px;
+      color: rgb(255,255,255);
+      font-family: "OPSB";
+      padding: 9px 7px;
+      letter-spacing:1.9px;
+      width:210px;
+      display:block;
+      margin:80px auto;
+      font-size:24px;
+  }
+  .content.event .info-event{
+      background-color:rgb(107,137,162);
+      color:rgb(255,255,255);
+      padding:100px 0;
+      text-align:center;
+    margin-bottom:-80px;
+  }
+  .content.event .info-event .wdh{
+      max-width:970px;
+  }
+  .content.event .info-event .title{}
+  .content.event .info-event .title h2{
+      font-family:"AMTW";
+      font-size:66px;
+  }
+  .content.event .info-event .text{
+      margin:100px 0;
+  }
+  .content.event .info-event .text p{
+      color:rgb(255,255,255);
+  }
+  .content.event .info-event .date_event{}
+  .content.event .info-event .date_event .item{
+      font-size:24px;
+      width:320px;
+      font-family:"AMTW";
+      margin-bottom:40px;
+  }
+  .content.event .info-event .date_event .item .icon{
+    position:relative;
+  }
+  .content.event .info-event .date_event .item .icon span{
+    color:rgb(101,119,118);
+    position:absolute;
+    top:50%;
+    left:50%;
+    font-family:'OPSB';
+  }
+  .content.event .info-event .date_event .item .icon span{
+    position:absolute;
+    top:50%;
+    left:50%;
+  }
+  .content.event .info-event .date_event .item .info{
+    font-family:'OPSB';
+    font-size:16px;
+  }
+  .content.event .info-event .maps{}
+  .content.event .info-event .maps iframe{
+      width:100%;
+      height:400px;
+      margin-top:120px;
+      border:0;
+      background-color:rgb(255,255,255);
+      border-radius:7px;
+  }
+  
+  /* FOOTER */
+  .footer{
+      background-color:rgb(255,255,255);
+      padding:20px;
+      text-align:center;
+      margin-top:40px;
+  }
+  .footer .whd{}
+  .footer .wdh a{}
+  .footer .wdh a img{}
+  .footer .wdh .copy{
+      padding:15px 0 0 0;
+  }
+  .footer .wdh .copy span{
+      font-size:16px;
+      font-family:"OPS";
+      color:rgb(101,119,118);
+  }
+  
+  .offCanvas{
+      background-color:rgba(162,186,206,.95);
+      position:fixed;
+      width:100%;
+      height:100%;
+      top:0;
+      left:0;
+      text-align:center;
+      display:none;
+      z-index:99999;
+      overflow:hidden;
+  }
+  .offCanvas nav{
+      width:100%;
+  }
+  .offCanvas nav ul{
+      margin:5%;
+      padding:0;
+      list-style:none;
+  }
+  .offCanvas nav ul li a{
+      background-color: rgb(107,137,162);
+      border-radius: 4px;
+      color: rgb(255,255,255);
+      font-family: "OPSB";
+      padding: 9px 7px;
+      letter-spacing:1.9px;
+      display:block;
+      margin:15px 0;
+      font-size:24px;
+  }
+  .offCanvas a.close{
+      position:absolute;
+      font-family: "OPSB";
+      font-size:24px;
+      color:rgb(255,255,255);
+      display:block;
+      width:100%;
+      bottom:10%;
+      left:0;
+  }
+  @media screen and (max-width:1430px){
+      .banner-slider .content-banner{
+          width:95%;
+      }
+      .banner-slider .content-banner .date-week{
+          right:0;
+      }
+      .swiper-container.slider-photos .swiper-wrapper .swiper-slide.item-foto.swiper-slide-duplicate.swiper-slide-next,
+      .swiper-container.slider-photos .swiper-wrapper .swiper-slide.item-foto.swiper-slide-next,
+      .swiper-container.slider-photos .swiper-wrapper .swiper-slide.item-foto.swiper-slide-duplicate.swiper-slide-next img,
+      .swiper-container.slider-photos .swiper-wrapper .swiper-slide.item-foto.swiper-slide-next img{
+          max-width:800px!important;
+      }
+  }
+  
+  @media screen and (max-width: 1170px){
+      .swiper-container.slider-photos .swiper-wrapper .swiper-slide.item-foto.swiper-slide-duplicate.swiper-slide-next,
+      .swiper-container.slider-photos .swiper-wrapper .swiper-slide.item-foto.swiper-slide-next,
+      .swiper-container.slider-photos .swiper-wrapper .swiper-slide.item-foto.swiper-slide-duplicate.swiper-slide-next img,
+      .swiper-container.slider-photos .swiper-wrapper .swiper-slide.item-foto.swiper-slide-next img{
+          max-width:800px!important;
+      }
+  }
+  
+  @media screen and (max-width: 930px) {
+      header.header .navbar{
+          bottom:0;
+      }
+      header.header .navbar nav{
+          width:90%;
+          height:20px!important;
+      }
+      header.header .navbar nav ul.desktop{
+          display:none;
+      }
+      header.header .navbar nav ul.mobile{
+          display:block!important;
+          padding:0;
+      }
+      header.header .navbar nav ul.mobile li{
+          text-align:center;
+      }
+      header.header .wdh .item-left{
+          width:100%;
+          margin-top:-40px;
+      }
+      header.header .wdh .item-left img{
+          height:50px;
+      }
+      header.header .wdh .item-right{
+          display:none;
+      }
+      header.header .wdh .item-title .line-title img{
+          width:100%;
+          padding:15px;
+      }
+      header.header .wdh .item-title .sub-title{
+          font-size:200%;
+      }
+      header.header .wdh .item-title .title-name a{
+          font-size:300%;
+      }
+      .banner-slider,
+      .banner-slider .content-banner,
+      .banner-slider .content-banner img.cover{
+          height:200px;
+      }
+      .banner-slider .content-banner .date-week{
+          bottom:-70px;
+          right:50%;
+      }
+  }
+  
+  .page-link {
+      background-color: rgba(107,137,162,0.4)!important;
+  }
+  .page-link:hover {
+      background-color: rgba(107,137,162,0.7)!important;
+  }
+  .page-item.active .page-link {
+      background-color: rgb(107,137,162)!important;
+  }
+  .page-item.disabled .page-link {
+      background-color: rgb(107,137,162)!important;
+  }
+  
+  .modal{
+    font-family:'OPSB';
+    padding:15px!important;
+  }
+  .modal h4{
+    margin:0 0 15px 0;
+    font-size:27px;
+    border-bottom:rgb(200,200,200) solid 1px;
+    padding-bottom:15px;
+  }
+  .jquery-modal{
+    z-index:99998999!important;
+  }
+  .modal{
+    color:rgb(100,100,100);
+  }
+  .modal input, .modal textarea{
+    border:rgb(107, 137, 162) solid 1px!important;
+    padding:20px!important;
+  }
+  .modal button{
+    background-color:rgb(107, 137, 162)!important;
+    border-radius: 3px;
+    border:0;
+    color: rgb(255,255,255);
+    padding: 15px 35px;
+    font-family:'OPS'!important;
+    font-size: 22px!important;
+    text-transform:lowercase;
+  }
+  
+  /*  */ 
+  .ftl, .ft2, .ft3, .ft4{
+    position: fixed;
+    z-index: -1;
+  }
+  .ftl{
+    width: 160px;
+    bottom: 420px;
+    left: 5%;
+  }
+  .ft2{
+    width: 160px;
+    bottom: 450px;
+    right: 0;
+  }
+  .ft3{
+    width: auto;
+    bottom: 50px;
+    left: 100px;
+  }
+  .ft4{
+    width: auto;
+    bottom: 104px;
+    right: 52px;
+  }
+  
+  @media screen and (max-width: 860px){
+    .ftl, .ft2, .ft3, .ft4{
+      zoom: 0.7
+    }
+  }
+  @media screen and (max-width: 440px){
+    .ftl, .ft2, .ft3, .ft4{
+      zoom: 0.5
+    }
+  }
