--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -21,7 +21,7 @@
             </div>
 
             <div class="">
-                <a class="bebe animate__animated animate__fadeInLeft" href="#">Martim</a>
+                <a class="bebe animate__animated animate__fadeInDown" href="#">Martim</a>
             </div>
         </div>
 
@@ -33,7 +33,7 @@
                  <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse  ps-2" [ngbCollapse]="!toggleNavbar">
-                <ul class="navbar-nav menu-collapse animate__animated animate__fadeInDown">
+                <ul class="navbar-nav menu-collapse animate__animated animate__fadeInLeft">
                     <li class="nav-item active">
                         <a class="nav-link" href="#" (click)="toggleNavbar = false" routerLinkActive="active" routerLink="/home">Home</a>
                     </li>
