--- a/src/app/pages/event/event.component.css
+++ b/src/app/pages/event/event.component.css
@@ -1,15 +1,15 @@
-.imgcss{
+.imgcss {
     margin: 5px;
-    height: 80vh;
+    height: auto;
     max-width: 90vw;
     border: solid 5px white;
-    background: rgba(255, 255, 255,.5);
+    background: rgba(255, 255, 255, .5);
     box-shadow: 0px 1vh 2vh rgb(0 0 0 / 80%);
-    margin-top: 3vh;
+    margin: auto;
+    margin-top: 20px;
 }
 
-
-.fontDefault{
+.fontDefault {
     margin: 1% 5% 1% 5%;
     background: rgba(250, 250, 250, .3);
     font-family: Artika;
