--- a/src/app/pages/event/event.component.html
+++ b/src/app/pages/event/event.component.html
@@ -1,5 +1,5 @@
-<div class="container-fluid w-100 h-100">
-    <div class="d-flex justify-content-center">
-            <img class="imgcss" src="assets/img/chadebebevirtual.png">
+<div class="container-fluid">
+    <div class="d-flex">
+        <img class="imgcss" src="assets/img/chadebebevirtual_mobile.png">
     </div>
 </div>
