--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,3 +1,5 @@
+<a *ngIf="this.cart?.length" class="cart animate__animated animate__headShake animate__slow animate__repeat-3" routerLink="/checkout" href="#"><img class="" src="/assets/img/cart.png"></a>
+
 <header class="header">
     <!-- Itens body -->
     <img src="/assets/img/icon-nuvem-1.png" class="ftl">
