--- a/src/app/pages/checkout/checkout.component.css
+++ b/src/app/pages/checkout/checkout.component.css
@@ -406,7 +406,8 @@ body {
     margin-bottom: 0;
     color: #606975;
     font-size: 14px;
-    font-weight: 500
+    font-weight: 500;
+    overflow-x: hidden;
 }
 
 .steps .step:first-child .step-icon-wrap::before {
@@ -595,6 +596,14 @@ body {
 
 .view-account .content-panel .mails-wrapper .mail-item .star-container .fa:hover {
     color: #868c97
+}
+
+.fraldatipo {
+    position: relative;
+    font-family: fantasy;
+    font-size: xx-large;
+    text-align: center;
+    top: -100px;
 }
 
 .view-account .content-panel .mails-wrapper .mail-item .mail-to {
