--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,6 +1,7 @@
 .imgcss {
     margin: 5px;
     max-width: 80%;
+    height: auto;
     border: solid 5px white;
     background: rgba(255, 255, 255, .5);
     box-shadow: 0px 1vh 2vh rgb(0 0 0 / 80%);
